--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,8 @@ dependencies:
   cached_network_image: ^3.4.1
   flutter_typeahead: ^5.2.0
   intl: ^0.20.2
-  firebase_auth: ^5.5.3
-  firebase_core: ^3.13.0
+  super_tooltip: ^2.0.9
+ 
 
 dev_dependencies:
   flutter_test:
